fix: delete concave css class + hover social media on dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,7 +66,3 @@
 		@apply w-full mx-auto;
 	}
 }
-
-.concave {
-	clip-path: polygon(0% 0%, 51% 6%, 100% 0%, 100% 100%, 51% 94%, 0% 100%);
-}
